# torahCodeResearch

./: .gitignore  README.md
java/: pom.xml
java/src/main/java/com/qaz216/codes/: CodeWrapper.java
java/src/main/java/com/qaz216/codes/components/letters/: Aleph.java  Letter.java
java/src/main/java/com/qaz216/codes/components/tanach/: Book.java
java/src/main/java/com/qaz216/codes/etc/: FileUtil.java
python/: README.md  pyproject.toml
python/src/torah_codes/: __init__.py  cli.py  comparison.py  els.py  els_statistics.py  exceptions.py  monte_carlo.py  proximity.py
python/src/torah_codes/corpus/: books.py  models.py  parser.py  validation.py
python/tests/integration/: test_load_torah.py  test_weismandel.py
python/tests/unit/: test_cli.py  test_comparison.py  test_els.py  test_els_statistics.py  test_monte_carlo.py  test_proximity.py
python/tests/unit/corpus/: test_parser.py
src/main/java/com/qaz216/codes/: App.java
src/main/java/com/qaz216/codes/components/letters/: LettersXml.java
src/main/java/com/qaz216/codes/components/tanach/: BookLine.java  Tanach.java
src/main/java/com/qaz216/codes/etc/: OpsUtil.java
src/test/java/com/qaz216/codes/: AppTest.java
src/torah_codes/corpus/: __init__.py  loader.py  mappings.py
